--- a/web_demo/sf.css
+++ b/web_demo/sf.css
@@ -1,6 +1,6 @@
 body {
     background-color: white;
-    overflow: hidden; /* Hide scrollbars */
+    /*overflow: hidden; /* Hide scrollbars */
 }
 
 
