--- a/web_demo/sf.css
+++ b/web_demo/sf.css
@@ -43,3 +43,35 @@ body {
 img {
     display: none;
 }
+
+
+
+
+
+
+
+
+
+.drawingBoard { width: 250px; height: 250px; cursor: crosshair; clear: both; overflow: hidden; }/*background-color: #fafafa; }*/
+.drawingBoard span { display: none; }
+.drawingBoard.loading span { display: inline; color: #606060; }
+.commands { width: 250px; margin-top: 3px; }
+.cmd { width: 122px; background-color: #fce7c0; text-align: center; cursor: default; padding: 3px; color: #606060; }
+.cmd.cmdUndo { float: right; }
+.cmd:hover { background-color: #f1d7a6; }
+.charPicker, .oneResult, .ifResult { 
+  font-family: SimHei, "Microsoft Yahei", STXihei, STHeitiSC-Medium, DengXian, sans-serif;
+  border: 1px solid #a0a0a0; padding: 3px; height: 70px; width: 400px; font-size: 48px; background-color: #fafafa; overflow: hidden; 
+  color: #606060;
+}
+
+.oneResult { background-color: #fc66db; 
+              font-size: xx-large; }
+.ifResult { border: 5px solid #d9f00c; 
+              font-size: xx-large; }
+
+@media (max-width: 800px) {
+  .content, .header { width: 100%; box-sizing: border-box; }
+  .colLeft, .colRight { width: 100%; float: left; clear: both; padding-left: 0; }
+  .commands { float: left; clear: both; }
+}
