put script back in html

--- a/web_demo/sf.css
+++ b/web_demo/sf.css
@@ -67,7 +67,7 @@ img {
 
 .oneResult { background-color: #fc66db; 
               font-size: xx-large; }
-.ifResult { border: 5px solid #0c23f0; 
+.ifResult { border: 5px solid #c70ebe; 
               font-size: xx-large; }
 
 @media (max-width: 800px) {
