--- a/web_demo/sf.css
+++ b/web_demo/sf.css
@@ -16,6 +16,10 @@ body {
     border: 5px solid saddlebrown;
 }
 
+#input-overlay {
+    margin-left: 150px;
+}
+
 #overlay-div-1 {
     position: absolute;
     margin-left: 100px;
@@ -65,10 +69,16 @@ img {
   color: #606060;
 }
 
-.oneResult { background-color: #fc66db; 
-              font-size: xx-large; }
-.ifResult { border: 5px solid #c70ebe; 
-              font-size: xx-large; }
+.oneResult, .ifResult {
+    font-size: xx-large;
+    border-radius: 25px;
+    width: 50px;
+    height: 50px;
+}
+
+.oneResult { background-color: #fc66db; }
+
+.ifResult { border: 5px solid #c70e0e; }
 
 @media (max-width: 800px) {
   .content, .header { width: 100%; box-sizing: border-box; }
