--- a/web_demo/sf.css
+++ b/web_demo/sf.css
@@ -57,14 +57,14 @@ img {
 
 
 
-.drawingBoard { width: 250px; height: 250px; cursor: crosshair; clear: both; overflow: hidden; }/*background-color: #fafafa; }*/
+.drawingBoard { width: 250px; height: 250px; cursor: crosshair; overflow: hidden; }/* clear: both; *background-color: #fafafa; }*/
 .drawingBoard span { display: none; }
 .drawingBoard.loading span { display: inline; color: #606060; }
 .commands { width: 250px; margin-top: 3px; }
 .cmd { width: 122px; background-color: #fce7c0; text-align: center; cursor: default; padding: 3px; color: #606060; }
-.cmd.cmdUndo { float: right; }
+/*.cmd.cmdUndo { float: right; }*/
 .cmd:hover { background-color: #f1d7a6; }
-.charPicker, .oneResult, .ifResult { 
+.charPicker, .results { 
   font-family: SimHei, "Microsoft Yahei", STXihei, STHeitiSC-Medium, DengXian, sans-serif;
   border: 1px solid #a0a0a0; padding: 3px; height: 70px; width: 400px; font-size: 48px; background-color: #fafafa; overflow: hidden; 
   color: #606060;
@@ -74,9 +74,12 @@ img {
 
 .results {
     font-size: xx-large;
-    border-radius: 25px;
+    border-radius: 50px;
     width: 50px;
     height: 50px;
+    text-align: center;
+    padding-top: 50%;
+    padding-bottom: 50%;
 }
 
 .oneResult { background-color: #fc66db; }
@@ -87,9 +90,10 @@ img {
 
 
 
-
+/*
 @media (max-width: 800px) {
   .content, .header { width: 100%; box-sizing: border-box; }
   .colLeft, .colRight { width: 100%; float: left; clear: both; padding-left: 0; }
   .commands { float: left; clear: both; }
 }
+*/
