--- a/web_demo/sf.css
+++ b/web_demo/sf.css
@@ -84,7 +84,7 @@ img {
 
 .oneResult { background-color: #fc66db; }
 
-.ifResult { border: 5px solid #df691a; }
+.ifResult { border: 5px solid #cbdf1a; }
 
 
 
