--- a/web_demo/sf.css
+++ b/web_demo/sf.css
@@ -18,7 +18,7 @@ body {
 
 #input-overlay {
     position: absolute;
-    border: 5px solid rgb(100, 50, 238);
+    border: 5px solid rgb(169, 50, 238);
 }
 
 #overlay-div-1 {
@@ -72,7 +72,12 @@ img {
 
 
 #allResults {
-    display: table;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100px;
+    height: 50px;
+    background-color: bisque;
 }
 
 .results {
@@ -81,7 +86,6 @@ img {
     width: 50px;
     height: 50px;
     text-align: center;
-    display: table-cell;
 }
 
 
