--- a/web_demo/sf.css
+++ b/web_demo/sf.css
@@ -16,7 +16,7 @@ body {
     border: 5px solid saddlebrown;
 }
 
-.overlay {
+.overlay2 {
     position: absolute;
     margin: 0 auto;
     z-index: 10;
