--- a/web_demo/sf.css
+++ b/web_demo/sf.css
@@ -15,14 +15,15 @@ body {
     z-index: 5;
     border: 5px solid saddlebrown;
 }
-
+/*
 .overlay2 {
     position: absolute;
     margin: 0 auto;
     z-index: 10;
     border: 5px solid rgb(41, 18, 2);
+    margin-left: 200px;
 }
-
+*/
 #input-overlay {
     position: absolute;
     border: 5px solid rgb(169, 50, 238);
@@ -77,7 +78,7 @@ img {
   color: #606060;
 }
 
-
+/*
 #allResults {
     display: flex;
     align-items: center;
@@ -86,7 +87,7 @@ img {
     height: 50px;
     background-color: bisque;
 }
-
+*/
 .results {
     font-size: xx-large;
     border-radius: 50px;
@@ -102,7 +103,7 @@ img {
 }
 
 #ifResult { 
-    border: 5px solid #1adf2b; 
+    border: 5px solid #df9a1a; 
 
 }
 
