--- a/web_demo/sf.css
+++ b/web_demo/sf.css
@@ -26,7 +26,9 @@ body {
 */
 #input-overlay {
     position: absolute;
-    border: 5px solid rgb(169, 50, 238);
+    border: 5px solid red;
+    margin-left: 300px;
+    left:100px;
 }
 
 #overlay-div-1 {
