--- a/web_demo/sf.css
+++ b/web_demo/sf.css
@@ -96,17 +96,20 @@ img {
     width: 50px;
     height: 50px;
     text-align: center;
+    left: 200px;
+    margin-left: 100px;
 }
 
 
 
 #oneResult { 
     background-color: #fc66db; 
+    left: 100px;
 }
 
 #ifResult { 
-    border: 5px solid #df9a1a; 
-
+    border: 5px solid #271adf; 
+    left: 300px;
 }
 
 
