--- a/web_demo/sf.css
+++ b/web_demo/sf.css
@@ -96,8 +96,7 @@ img {
     width: 50px;
     height: 50px;
     text-align: center;
-    left: 200px;
-    margin-left: 100px;
+    left: 100px;
 }
 
 
@@ -108,7 +107,7 @@ img {
 }
 
 #ifResult { 
-    border: 5px solid #271adf; 
+    border: 5px solid #b81adf; 
     left: 300px;
 }
 
