--- a/web_demo/sf.css
+++ b/web_demo/sf.css
@@ -13,7 +13,7 @@ body {
     position: absolute;
     margin: 0 auto;
     z-index: 5;
-    border: 5px solid saddlebrown;
+    /*border: 5px solid saddlebrown;*/
 }
 
 .overlay2 {
@@ -21,7 +21,7 @@ body {
     margin: 0 auto;
     z-index: 10;
     border: 5px solid rgb(41, 18, 2);
-    margin-left: 200px;
+    /*margin-left: 200px;*/
 }
 
 #input-overlay {
@@ -62,6 +62,45 @@ img {
 }
 
 
+#allResults {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100px;
+    height: 50px;
+    background-color: rgb(202, 223, 15);
+    position: relative;
+    text-align: center;
+}
+
+
+.results {
+    font-size: xx-large;
+    border-radius: 50px;
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    position: relative;
+}
+
+.results p {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    
+}
+
+#oneResult { 
+    background-color: #fc66db; 
+    left: 100px;
+}
+
+#ifResult { 
+    border: 5px solid #b81adf; 
+    left: 300px;
+}
 
 
 
@@ -78,38 +117,6 @@ img {
   border: 1px solid #a0a0a0; padding: 3px; height: 70px; width: 400px; font-size: 48px; background-color: #fafafa; overflow: hidden; 
   color: #606060;
 }
-
-/*
-#allResults {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100px;
-    height: 50px;
-    background-color: bisque;
-}
-*/
-.results {
-    font-size: xx-large;
-    border-radius: 50px;
-    width: 50px;
-    height: 50px;
-    text-align: center;
-}
-
-
-
-#oneResult { 
-    background-color: #fc66db; 
-    left: 100px;
-}
-
-#ifResult { 
-    border: 5px solid #b81adf; 
-    left: 300px;
-}
-
-
 
 
 
